# whisp-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  cloudbuild.yaml  eslint.config.mjs  generate_wkt.py  jest-with-vm-modules.js  jest.config.js  jest.env.js  jest.setup.js  jest.setup.ts  layers_description.md  lookup_gee_datasets.csv  next.config.js  package-lock.json  package.json  playwright.config.ts  requirements.txt  tailwind.config.js  tailwind.config.ts  tsconfig.json
api/: .env.example  Dockerfile  pyproject.toml
api/src/: __main__.py  app_logging.py  codes.py  config.py  exceptions.py  job_progress.py  main.py  responses.py  run.py  schemas.py
api/src/auth/: api_key.py  rate_limiter.py
api/src/db/: __init__.py  api_keys.py  jobs.py  pool.py
api/src/geoid/: client.py
api/src/geojson/: csv_export.py  router.py
api/src/io/: files.py
api/src/public_config/: router.py
api/src/redis/: __init__.py  events.py
api/src/registry/: client.py
api/src/result_fields/: csv_export.py  router.py
api/src/status/: router.py  service.py
api/src/submit/: router.py  schemas.py  service.py  validators.py
api/src/worker/: analysis_task.py  celery_app.py  tasks.py
app/: .env.example  Dockerfile  components.json  next.config.ts  package-lock.json  package.json
db/: Dockerfile  migrate.js  migration-entrypoint.sh  package-lock.json  package.json
docs/: gee-data-separation.md  privacy-policy.md  terms-of-service.md
public/: CICC_plots_subset_simple.geojson  civ_plot.json  civ_plot_wkt.txt  datasets.json  geoids.txt  swagger.json  (+2 more)
(+580 files in other folders)
