[project]
name = "whisp-api"
version = "0.0.0"
description = "FastAPI service for Whisp geospatial analysis submit and status routes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "shapely>=2.0.0",
    "openforis-whisp==3.0.0a14",
    "earthengine-api==1.6.11",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "importlib-metadata>=8.0.0",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.3",
    "redis>=5.2.0",
    "python-json-logger>=3.0.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.scripts]
whisp-api = "src.__main__:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
